--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - checkout
       #- restore_cache:
-      #    keys: [frontend-build]
+      #    keys: [new-frontend-build]
       - run:
           name: Install dependencies
           command: |
@@ -48,7 +48,7 @@ jobs:
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
-          key: frontend-build
+          key: new-frontend-build
 
   build-backend:
     docker:
@@ -56,7 +56,7 @@ jobs:
     steps:
       - checkout
       #- restore_cache:
-      #    keys: [backend-build]
+      #    keys: [new-backend-build]
       - run:
           name: Install dependencies
           command: |
@@ -69,7 +69,7 @@ jobs:
              npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: backend-build
+          key: new-backend-build
 
   test-frontend:
     docker:
