--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - image: circleci/node:14.7.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [new-frontend-build]
+      #- restore_cache:
+      #    keys: [n-frontend-build]
       - run:
           name: Install dependencies
           command: |
@@ -48,15 +48,15 @@ jobs:
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
-          key: new-frontend-build
+          key: n-frontend-build
 
   build-backend:
     docker:
       - image: circleci/node:14.7.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [new-backend-build]
+      #- restore_cache:
+      #    keys: [n-backend-build]
       - run:
           name: Install dependencies
           command: |
@@ -69,7 +69,7 @@ jobs:
              npm run build
       - save_cache:
           paths: [backend/node_modules]
-          key: new-backend-build
+          key: n-backend-build
 
   test-frontend:
     docker:
@@ -77,7 +77,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [new-frontend-build]
+          keys: [n-frontend-build]
       - run:
           name: fix test 
           command: |
@@ -95,7 +95,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [new-backend-build]
+          keys: [n-backend-build]
       - run:
           name: test backend
           command: |
@@ -108,7 +108,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [new-frontend-build]
+          keys: [n-frontend-build]
       - run:
           name: fix scan
           command: |
@@ -126,7 +126,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [new-backend-build]
+          keys: [n-backend-build]
       - run:
           name: fix scan
           command: |
