--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - image: circleci/node:14.7.0
     steps:
       - checkout
-      #- restore_cache:
-      #    keys: [n-frontend-build]
+      - restore_cache:
+          keys: [n-frontend-build]
       - run:
           name: Install dependencies
           command: |
@@ -55,8 +55,8 @@ jobs:
       - image: circleci/node:14.7.0
     steps:
       - checkout
-      #- restore_cache:
-      #    keys: [n-backend-build]
+      - restore_cache:
+          keys: [n-backend-build]
       - run:
           name: Install dependencies
           command: |
@@ -218,6 +218,8 @@ jobs:
       - image: sleavely/node-awscli:14.x
     steps:
       - checkout
+      - restore_cache:
+          keys: [n-backend-build]      
       - run:
           name: install less
           command: |
@@ -242,9 +244,10 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            can .env
             npm i
-            npm run migrations > migration_output.txt
-            cat migration_output.txt
+            npm run migrations > ~/migration_output.txt
+            cat ~/migration_output.txt
       - run:
           name: Send migration results to memstash
           command: |
@@ -263,8 +266,8 @@ jobs:
           root: ~/
           paths:
             - .env
-      - destroy-environment
-      - revert-migrations
+      #- destroy-environment
+      #- revert-migrations
 
   deploy-frontend:
     docker:
@@ -433,21 +436,21 @@ jobs:
 workflows:
   default:
     jobs:   
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend] 
-      - scan-frontend:
-          requires: [build-frontend]
+      #- build-frontend
+      #- build-backend
+      #- test-frontend:
+      #    requires: [build-frontend]
+      #- test-backend:
+      #    requires: [build-backend]
+      #- scan-backend:
+      #    requires: [build-backend] 
+      #- scan-frontend:
+      #    requires: [build-frontend]
       #- deploy-infrastructure:
       #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #- configure-infrastructure:
       #    requires: [deploy-infrastructure]
-      #- run-migrations:
+      - run-migrations
       #    requires: [configure-infrastructure]          
       #- deploy-frontend:   
       #    requires: [run-migrations]              
